fix(VDataTable): Add CSS to align headers center

--- a/packages/vuetify/src/labs/VDataTable/VDataTable.sass
+++ b/packages/vuetify/src/labs/VDataTable/VDataTable.sass
@@ -32,6 +32,12 @@
 
               .v-data-table-header__content
                 flex-direction: row-reverse
+            
+            &.v-data-table-column--align-center
+              text-align: center
+
+              .v-data-table-header__content
+                justify-content: center
 
             &.v-data-table-column--no-padding
               padding: 0 8px
